# copilot

./: .gitignore  PROGRAM_OVERVIEW.txt  check_and_install_deps.py  start_all.py
backend/: README.md  agent_manager.py  main.py  pyproject.toml  requirements.txt
backend/autogen-studio-env/: pyvenv.cfg
backend/autogen-studio-env/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py  runxlrd.py  vba_extract.py
copilot.ai/: README.md  agent.py  crew_example.py  main.py  package-lock.json  package.json  requirements.txt  start_app.py
copilot.ai/.next/: app-build-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  trace
copilot.ai/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
copilot.ai/.next/server/: middleware-build-manifest.js  pages-manifest.json  server-reference-manifest.js  server-reference-manifest.json
copilot.ai/.next/server/chunks/: 585df_next_dist_49f10992._.js  585df_next_dist_49f10992._.js.map  [root-of-the-server]__6a8cad49._.js  [root-of-the-server]__6a8cad49._.js.map
copilot.ai/.next/server/pages/: _app.js  _document.js  _error.js  agentic-ui.js  history.js
copilot.ai/components/: ChatWindow.tsx  GeneralPurposeRunner.tsx  agentic-ui.css  metacrewBlueprint.ts
copilot.ai/pages/: _app.tsx  agentic-ui.tsx  history.tsx  index.tsx  settings.tsx
copilot.ai/pages/api/: copilotkit.ts
docs/components/react/: integrations.tsx
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.module.css  page.tsx  useCrewAgent.ts
frontend/types/: index.ts
(+399 files in other folders)
